tests/NormalTests/paczka1/fuzzy1/46914560.err
Error in line 8: 9HTCD S611 95,5
Error in line 12: A425 A425 42,5
Error in line 21: A425 S344 4,8
Error in line 24: A425 A125 49,3
Error in line 32: A425 S344 61,9
